mods to get Ralph's BLAST talk to compile

--- a/talks/BLAST/BLAST-Nashville-talk.tex
+++ b/talks/BLAST/BLAST-Nashville-talk.tex
@@ -13,7 +13,7 @@
 \usepackage{tikz}
 \usetikzlibrary{calc}
 
-\input{rflatexmacs}
+\usepackage{rflatexmacs}
 \newcommand{\SSS}{\text{\emphslb{S}}}
 \newcommand{\bL}{\alg L}
 \newcommand{\bB}{\alg B}
