commented out diagrams.sty in the tex file.

--- a/talks/BLAST2017/BLAST-2017-Freese.tex
+++ b/talks/BLAST2017/BLAST-2017-Freese.tex
@@ -9,7 +9,7 @@
 \usepackage[mathcal]{euscript}
 
 \usepackage{graphicx}
-\usepackage{diagrams}
+%\usepackage{diagrams}
 \usepackage{tikz}
 \usetikzlibrary{calc}
 
